--- a/views/login.ejs
+++ b/views/login.ejs
@@ -85,6 +85,21 @@
     .form-signin {
         background-color: #f5f5f5;
     }
+
+    .container-responsive-lg {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .mb-4 {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        max-width: 50px;
+        max-height: 50px;
+    }
 </style>
 
 <!-- Here is the body of the page with its components -->
@@ -92,7 +107,9 @@
 <body class="text-center bg-img">
     <main class="form-signin">
         <form>
-            <img class="mb-4" src="https://1.bp.blogspot.com/--poX9F4Hd4Q/YJyQtl7pSuI/AAAAAAAB4S4/DOvU-PVnLjoGJDh2uf5YXnLBrugonFYBwCLcBGAsYHQ/s320/nutty%2Blogo.jpg" alt="" width="72" height="57">
+            <div class="container-responsive-lg">
+            <img class="mb-4" src="https://1.bp.blogspot.com/--poX9F4Hd4Q/YJyQtl7pSuI/AAAAAAAB4S4/DOvU-PVnLjoGJDh2uf5YXnLBrugonFYBwCLcBGAsYHQ/s320/nutty%2Blogo.jpg" alt="">
+            </div>
             <h1 class="h3 mb-3 fw-normal">Faça seu login</h1>
 
             <div class="form-floating">
